# interactive-mouse-event-sdl

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.md.txt  main.c  toolchain-mingw64.cmake
